# awase

./: CLAUDE.md  Cargo.nix  Cargo.toml  README.md  flake.nix
src/: action.rs  binding.rs  chord.rs  condition.rs  conflict.rs  error.rs  hotkey.rs  lib.rs  manager.rs  mode.rs  remap.rs
src/macos/: flags.rs  keycode.rs  mod.rs
